First commit on feature extractioh

--- a/Code/BME_Proj.ipynb
+++ b/Code/BME_Proj.ipynb
@@ -177,7 +177,9 @@
     "        # Append the window to the list\n",
     "        windows.append(windowed_signal)\n",
     "\n",
-    "    return windows\n"
+    "    return windows\n",
+    "\n",
+    "signal_windows = window_signal(emg_signal_normalized, window_length, window_step)"
    ]
   },
   {
@@ -200,11 +202,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Defining each feature"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from scipy.stats import skew, kurtosis\n",
+    "\n",
+    "def mean_absolute_value(signal):\n",
+    "    return np.mean(np.abs(signal))\n",
+    "\n",
+    "def standard_deviation(signal):\n",
+    "    return np.std(signal)\n",
+    "\n",
+    "def variance(signal):\n",
+    "    return np.var(signal)\n",
+    "\n",
+    "def waveform_length(signal):\n",
+    "    return np.sum(np.abs(np.diff(signal)))\n",
+    "\n",
+    "def zero_crossing(signal):\n",
+    "    return np.sum(np.diff(np.sign(signal)) != 0)\n",
+    "\n",
+    "def root_mean_square(signal):\n",
+    "    return np.sqrt(np.mean(np.square(signal)))\n",
+    "\n",
+    "def number_of_peaks(signal):\n",
+    "    peaks, _ = find_peaks(signal)\n",
+    "    return len(peaks)\n",
+    "\n",
+    "def slope_sign_change(signal):\n",
+    "    return np.sum(np.diff(np.sign(np.diff(signal))) != 0)\n",
+    "\n",
+    "def correlation_coefficient(signal1, signal2):\n",
+    "    return np.corrcoef(signal1, signal2)[0, 1]\n",
+    "\n",
+    "def integrated_absolute_value(signal):\n",
+    "    return np.sum(np.abs(signal))\n",
+    "\n",
+    "def find_peaks(signal, height=0):\n",
+    "    peaks, _ = find_peaks(signal, height=height)\n",
+    "    return peaks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying these features to the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_features_for_windows(signal_windows):\n",
+    "    features = []\n",
+    "\n",
+    "    for window in signal_windows:\n",
+    "        mav = mean_absolute_value(window)\n",
+    "        std = standard_deviation(window)\n",
+    "        var = variance(window)\n",
+    "        wl = waveform_length(window)\n",
+    "        zc = zero_crossing(window)\n",
+    "        rms = root_mean_square(window)\n",
+    "        npk = number_of_peaks(window)\n",
+    "        ssc = slope_sign_change(window)\n",
+    "        cor = correlation_coefficient(window, window)  # Example using the same window for correlation\n",
+    "        iav = integrated_absolute_value(window)\n",
+    "\n",
+    "        features.append([mav, std, var, wl, zc, rms, npk, ssc, cor, iav])\n",
+    "\n",
+    "    # Create a DataFrame from the features list\n",
+    "    columns = ['MAV', 'STD', 'VAR', 'WL', 'ZC', 'RMS', 'NP', 'SSC', 'Cor', 'IAV']\n",
+    "    features_df = pd.DataFrame(features, columns=columns)\n",
+    "\n",
+    "    return features_df"
+   ]
   },
   {
    "cell_type": "markdown",
